--- a/package.json
+++ b/package.json
@@ -32,5 +32,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@react-mock/localstorage": "^0.1.2",
+    "@react-mock/state": "^0.1.8"
   }
 }
